<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.thd.base</groupId>
	<artifactId>thd-base-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>thd-base-tool</module>
		<module>thd-base-util</module>
		<module>thd-base-security</module>
	</modules>


	<properties>

		<thdBaseParentVersion>0.0.1-SNAPSHOT</thdBaseParentVersion>
		<log4jVersion>1.2.17</log4jVersion>
		<jsonwebtokenVersion>0.6.0</jsonwebtokenVersion>
		<gsonVersion>2.7</gsonVersion>
		<beanutilsVersion>1.9.2</beanutilsVersion>
		<auth0Version>2.2.0</auth0Version>
		<lang3Version>3.3.2</lang3Version>
		<quartzVersion>2.0.2</quartzVersion>
	</properties>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.0.1.RELEASE</version>
	</parent>



	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4jVersion}</version>
			</dependency>

			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt</artifactId>
				<version>${jsonwebtokenVersion}</version>
			</dependency>

			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gsonVersion}</version>
			</dependency>

			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${beanutilsVersion}</version>
			</dependency>

			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>${auth0Version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${lang3Version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartzVersion}</version>
			</dependency>

			<dependency>
				<groupId>com.thd.base</groupId>
				<artifactId>thd-base-util</artifactId>
				<version>${thdBaseParentVersion}</version>
			</dependency>

			<dependency>
				<groupId>com.thd.base</groupId>
				<artifactId>thd-base-tool</artifactId>
				<version>${thdBaseParentVersion}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<!-- 设置maven编译使用的jdk -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.5.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>utf-8</encoding>
					</configuration>
				</plugin>

				<!-- 编译时打包源码到target -->
				<plugin>
					<artifactId>maven-source-plugin</artifactId>

					<configuration>
						<attach>true</attach>
					</configuration>
					<executions>
						<execution>
							<!-- 在maven的compile 阶段就开始打包 -->
							<phase>compile</phase>
							<goals>
								<!-- 源码单独作为一个jar包 -->
								<goal>jar</goal>
								<!--源码打进jar包中 类似执行mvn source:jar -->
								<!-- <goal>jar-no-fork</goal> -->
							</goals>
						</execution>
					</executions>
				</plugin>

				<!-- 清理jar目录 -->
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<filesets>
							<fileset>
								<directory>jar</directory>
								<followSymlinks>false</followSymlinks>
							</fileset>
						</filesets>
					</configuration>
				</plugin>

				<!-- 拷贝项目所依赖jar到 jar目录下 -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.0.2</version>
					<executions>
						<execution>
							<id>copy</id>
							<phase>install</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<outputDirectory>jar</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.10.4</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<aggregate>true</aggregate>
						<charset>UTF-8</charset>
						<docencoding>UTF-8</docencoding>
						<!-- 忽略警告 -->
						<additionalparam>-Xdoclint:none</additionalparam>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>


			</plugins>
		</pluginManagement>
	</build>
</project>